# litebird_imo

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
browser/: admin.py  models.py  urls.py  views.py
browser/migrations/: 0001_initial.py
browser/templates/browser/: data_file_detail.html  entity_detail.html  entity_type_detail.html  index.html
litebird_imo/: settings.py  urls.py  wsgi.py
