[tool.poetry]
name = "litebird_imo"
version = "0.1.0"
description = "Mock implementation of a LiteBIRD Instrument MOdel (IMO) database"
authors = ["Maurizio Tomasi <maurizio.tomasi@unimi.it>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
django-filter = "^2.2"
djangorestframework = "^3.11"
Markdown = "^3.1"
pytz = "^2019.3"
sqlparse = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
